created button/element placeholders

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document CHANGED!</title>
 </head>
 <body>
-    
+    <button id="report-button">report button</button>
+    <form>
+            <input type="text" placeholder="Search Another City">
+    </form>
+    <div id="main-weather">
+
+    </div>
+
+    <div id="weekly-weather">
+        
+    </div>
+
+    <button id="light-dark">light-dark</button>
 </body>
 </html>
