--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
             <input type="text" placeholder="Search Another City">
     </form>
     <div id="main-weather">
+        <h1 id="city-name"></h1>
 
+        <p id="current-temperature"></p>
+        <div id="date"></div>
+        <div>
+            <img id="weather-photo" src="">
+            <p id="high-low"></p>
+        </div>
     </div>
 
     <div id="weekly-weather">
