made minor changes to clothing section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
             <img id="weather-photo" src="">
             <p id="high-low"></p>
-            <p id="whatToWear">What to wear:</p>
+            <p id="whatToWear">What to wear</p>
             <ul id="clothes">
                 <li></li>
                 <li></li>
