fixed layout of main box

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div id="white-box">
         <div id="main-weather">
             <h1 id="city-name"></h1>
-            <div id="date"></div>
             <div>
+                <div id="date"></div>
                 <img id="weather-photo" src="">
                 <p id="high-low"></p>
             </div>
@@ -35,9 +35,11 @@
             
             <h1 id="current-temperature"></h1>
             <div>
-                <div id="date"></div>
-                <img id="weather-photo" src="">
-                <p id="high-low"></p>
+                <div class="main-day-container">
+                    <div id="date"></div>
+                    <img id="weather-photo" src="">
+                    <p id="high-low"></p>
+                </div>
                 <p id="current-temperature"></p>
                 <p id="whatToWear">What to wear</p>
                 <ul id="clothes">
