finished styling main weather area

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="white-box">
         <div id="main-weather">
             <h1 id="city-name"></h1>
-            <div>
+            <div class="main-day-container">
                 <div id="date"></div>
                 <img id="weather-photo" src="">
                 <p id="high-low"></p>
@@ -35,18 +35,20 @@
             
             <h1 id="current-temperature"></h1>
             <div>
-                <div class="main-day-container">
+                <!-- <div class="main-day-container">
                     <div id="date"></div>
                     <img id="weather-photo" src="">
                     <p id="high-low"></p>
-                </div>
+                </div> -->
                 <p id="current-temperature"></p>
-                <p id="whatToWear">What to wear</p>
-                <ul id="clothes">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <div id="list-container">
+                    <p id="whatToWear">Remember to wear or bring</p>
+                    <ul id="clothes">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </div>
     
