--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="form-popup"id="myForm">
             <label for "Error"></label>
             <input type="text" placeholder="Enter Error">
-            <button class"btns">Submit</button>
-            <button class"btnc">Cancel</button>
+            <button id="btns">Submit</button>
+            <button id="btnc">Cancel</button>
         </div>
         <div id="form-container"></div>
         
