Added functional form for user to report bugs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button class="error-button">&#33;</button>
         <div class="form-popup"id="myForm">
             <label for "Error"></label>
-            <input type="text" placeholder="Enter Error">
+            <input class="form-error" type="text" placeholder="Enter Error">
             <button id="btns">Submit</button>
             <button id="btnc">Cancel</button>
         </div>
